# OSynaptic-FX

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  keywords.txt  library.properties
.github/workflows/: ci.yml  release.yml
cmake/arch_presets/: avr2560.cmake  avr328p.cmake  cortexm0plus.cmake  cortexm3.cmake  cortexm33.cmake  cortexm4.cmake  cortexm7.cmake  esp32.cmake  riscv32.cmake  x86_64.cmake
cmake/toolchains/: arm-cortexm0plus.cmake  arm-cortexm3.cmake  arm-cortexm33.cmake  arm-cortexm7.cmake  avr-atmega2560.cmake  avr-atmega328p.cmake  xtensa-esp32.cmake
docs/: 18-data-format-specification.md  CHANGELOG.md
examples/: README.md
examples/BasicEncode/: BasicEncode.ino
examples/BootCliOrRun/: BootCliOrRun.ino
examples/ESP32ReportBench75B/: ESP32ReportBench75B.ino
examples/ESP32WiFiMultiSensorAuto/: ESP32WiFiMultiSensorAuto.ino
examples/EasyQuickStart/: EasyQuickStart.ino
examples/FusionAutoMode/: FusionAutoMode.ino
examples/FusionModeTest/: FusionModeTest.ino
examples/MultiSensorNodePacket/: MultiSensorNodePacket.ino
examples/PacketMetaDecode/: PacketMetaDecode.ino
examples/QuickBench/: QuickBench.ino
examples/SecureSessionRoundtrip/: SecureSessionRoundtrip.ino
extras/precompiled-non-arduino/: README.md
include/: osfx_build_config.h  osfx_core.h  osfx_easy.h  osfx_fusion_state.h  osfx_glue.h  osfx_id_allocator.h  osfx_solidity.h  osfx_storage.h  osfx_template_grammar.h  osfx_user_config.h
scripts/: build.ps1  release.ps1
src/: OSynapticFX.h  osfx_cli_lite.c  osfx_core_facade.c  osfx_easy.c  osfx_fusion_state.c  osfx_id_allocator.c  osfx_solidity.c  osfx_storage.c  osfx_storage_littlefs.c  osfx_storage_littlefs.h  osfx_template_grammar.c
tests/: test_osfx_core.c  test_osfx_integration.c
tools/: osfx_bench_main.c  osfx_cli_main.c
